# req

./: .gitignore  Cargo.toml  Makefile  README.md
src/: arg_parser.rs  lib.rs  main.rs  new_requests.rs  parser.rs  parser_new.rs  requests.rs  tui.rs
tests/: env_test.rs  new_requests_test.rs  parser_new_test.rs  parser_test.rs  process_test.rs  requests_test.rs  tokenizer_test.rs
