[package]
name = "req"
version = "0.1.2"
edition = "2024"

[dependencies]
clap = { version = "4.6.0", features = ["cargo"] }
crossterm = "0.29.0"
formatjson = "0.3.1"
ratatui = "0.30.0"
ratatui-code-editor = "0.0.3"
ratatui-widgets = "0.3.0"
reqwest = { version = "0.13.2", features = ["json", "form"] }
tokio = { version = "1.50.0", features = ["full"] }
serde_json = "1"
regex = "1"

[dev-dependencies]
tempfile = "3"
wiremock = "0.6"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
